--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -360,7 +360,7 @@ body {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: rgba(0, 255, 255, 0.5);
+  background-color: var(--neon-color);
   animation: scan 600s linear infinite;
   z-index: 2;
   pointer-events: none;
