removed logo from thank you message in shop cart. Added to components array in nav bar so correct nav link is highlighted when in a game

--- a/src/Components/Shop/CSS/Cart.css
+++ b/src/Components/Shop/CSS/Cart.css
@@ -19,8 +19,12 @@
   overflow-y: auto;
   background-image: url("../../../Images/Shop/camellogo.png");
   background-position: center;
-  background-size: 60%;
+  background-size: 50%;
   background-repeat: no-repeat;
+}
+
+.Cart.no-background {
+  background-image: none;
 }
 
 .cart-button-cont {
