--- a/src/Components/Forecast/Forecast.css
+++ b/src/Components/Forecast/Forecast.css
@@ -24,6 +24,26 @@
   width: 100%;
 }
 
+.forecast-modal-btn {
+  margin-left: 5%;
+  background-color: red;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: none;
+  opacity: 0.7;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.612);
+}
+
+.forecast-modal-btn:hover {
+  opacity: 1;
+  color: black;
+}
+
 /* Responsive adjustments */
 @media screen and (max-width: 767px) {
   .terminal-header {
