--- a/src/Components/Weatherly/Terminal.css
+++ b/src/Components/Weatherly/Terminal.css
@@ -65,7 +65,8 @@
   border-radius: 50%;
   opacity: 0.7;
   border: none;
-  cursor: pointer;
+  cursor: none;
+  pointer-events: none;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -75,6 +76,7 @@
 
 .w-terminal-close {
   background-color: #ff5f56;
+  cursor: ;
 }
 
 .w-terminal-minimize {
@@ -90,7 +92,7 @@
   text-align: center;
   color: var(--polar);
   opacity: 0.7;
-  font-size: 1.25em;
+  font-size: 1.35em;
   margin-right: 45px;
   white-space: nowrap;
   overflow: hidden;
@@ -103,6 +105,7 @@
   scroll-behavior: smooth;
   max-height: calc(100% - 30px); /* Adjust based on your header height */
   padding: 10px;
+  font-size: 1.25em;
 }
 
 /* Scrollbar Styling */
