--- a/src/Components/Games/Crossword/Crossword.css
+++ b/src/Components/Games/Crossword/Crossword.css
@@ -38,6 +38,12 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Crimson+Text:wght@400;700&family=Inter:wght@400;500&display=swap");
 
+.Crossword-background-cont {
+  height: fit-content;
+  width: 100%;
+  background-color: #1a1a1ad0;
+}
+
 .Crossword {
   margin: 0;
   padding: 2vh 2vw;
