--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html,
 body {
+  width: 100%;
+  max-width: 100vw;
+}
+
+/* body {
   margin: 0;
   padding: 60px 0 0 0;
-}
+} */
