--- a/src/Components/Games/Numerix/TouchPad.css
+++ b/src/Components/Games/Numerix/TouchPad.css
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(16, 103, 224, 0.714);
+  background: var(--school-blue);
   border-radius: 5px;
   height: 100%;
   width: 100%;
